--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
  			<h1 class="header-title"> Ремонт квадрокоптеров </h1>
  			<p class="header-subtitle"> Ремонт и настройка квадрокоптеров любой сложности. <br> Заберём. Починим. Доставим. </p>
  			<div class="header-button-block">
- 				<button class="header-button"> Связаться </button>
+ 				<a href="https://vk.com/nike2508" class="header-button"> Связаться </a>
  				<small>*Бесплатная консультация и диагностика</small>
  			</div> <!-- /.col-5 -->
 			</div> <!-- /.row -->
@@ -77,12 +77,12 @@
  				</div>
  				<div class="col-md-4">
  					<div class="social-block">
- 					<p> Подпишитесь: </p>	
+ 					<p> Мы в социальных сетях: </p>	
  						<a href="#"> <img src="img/social/facebook-logo-button.png" alt="Facebook"> 
  						</a>
  						<a href="#"> <img src="img/social/telegram-symbol.png" alt="Telegram">		
  						</a>
- 						<a href="#"> <img src="img/social/vk-social-logotype.png" alt="Vkontakte">		
+ 						<a href="https://vk.com/nike2508"> <img src="img/social/vk-social-logotype.png" alt="Vkontakte">		
  						</a>
  						<a href="#"> <img src="img/social/youtube-symbol.png" alt="Youtube">	
  						</a>
@@ -92,7 +92,7 @@
  				<div class="col-md-4">
  					<div class="footer-cta-block">
  						<p class="footer-cta"> Напишите нам: </p>
- 					<button class="footer-button">Написать</button>
+ 					<a href="https://vk.com/nike2508" class="footer-button">Написать</a>
  					</div>
  				</div>
  				</div>
