--- a/index.html
+++ b/index.html
@@ -14,11 +14,13 @@
 	<link rel="icon" href="/favicon.ico">
 	<!-- Заголовок на вкладке в браузере -->
 	<title> Ремонт квадрокоптеров </title>
-	<!-- Шрифты Google>
+	<!-- Шрифты Google -->
 	<link href="https://fonts.googleapis.com/css?family=Roboto:400,700&amp;subset=cyrillic" rel="stylesheet">
 	<!-- Подключаем наш файл со стилями, который находится в папке css-->
 	<link rel="stylesheet" href="css/bootstrap-grid.min.css">
 	<link rel="stylesheet" href="css/style.css">
+	<link rel="stylesheet" href="css/animate.css">
+	<link rel="stylesheet" href="css/animate_2.css">
 	</head>
 
 		<body>
@@ -27,13 +29,13 @@
  			<div class="container">
  			<div class="row">
  			<div class="col-xl-7">
- 			<img class="header-img" src="img/main-img2.png" alt="Монитор">
+ 			<img class="header-img wow fadeInLeftBig" src="img/main-img2.png" alt="Монитор">
  			</div> <!-- /.col-7 -->
  			<div class="col-xl-5">
- 			<p class="header-pretitle"> Сервисный центр </p>
- 			<h1 class="header-title"> Ремонт квадрокоптеров </h1>
- 			<p class="header-subtitle"> Ремонт и настройка квадрокоптеров любой сложности. <br> Заберём. Починим. Доставим. </p>
- 			<div class="header-button-block">
+ 			<p class="header-pretitle wow fadeInRightBig"> Сервисный центр </p>
+ 			<h1 class="header-title animated fadeInRightBig"> Ремонт квадрокоптеров </h1>
+ 			<p class="header-subtitle wow fadeInRightBig"> Ремонт и настройка квадрокоптеров любой сложности. <br> Заберём. Починим. Доставим. </p>
+ 			<div class="header-button-block wow fadeInRightBig">
  				<a href="https://vk.com/nike2508" class="header-button"> Связаться </a>
  				<small>*Бесплатная консультация и диагностика</small>
  			</div> <!-- /.col-5 -->
@@ -43,7 +45,7 @@
 
  		<section class="portfolio">
  			<div class="container">
- 			<div class="portfolio-block"> 
+ 			<div class="portfolio-block wow fadeIn"> 
 			<h2 class="portfolio-title"> Качественный и быстрый сервис </h2>
 			<p class="portfolio-subtitle"> Пробный текст </p>
 			<div class="row">
@@ -78,13 +80,13 @@
  				<div class="col-md-4">
  					<div class="social-block">
  					<p> Мы в социальных сетях: </p>	
- 						<a href="#"> <img src="img/social/facebook-logo-button.png" alt="Facebook"> 
+ 						<a class="wow bounceInDown" data-wow-delay="0.1s" href="#"> <img src="img/social/facebook-logo-button.png" alt="Facebook"> 
  						</a>
- 						<a href="#"> <img src="img/social/telegram-symbol.png" alt="Telegram">		
+ 						<a class="wow bounceInDown" data-wow-delay="0.2s" href="#"> <img src="img/social/telegram-symbol.png" alt="Telegram">		
  						</a>
- 						<a href="https://vk.com/nike2508"> <img src="img/social/vk-social-logotype.png" alt="Vkontakte">		
+ 						<a class="wow bounceInDown" data-wow-delay="0.3s" href="https://vk.com/nike2508"> <img src="img/social/vk-social-logotype.png" alt="Vkontakte">		
  						</a>
- 						<a href="#"> <img src="img/social/youtube-symbol.png" alt="Youtube">	
+ 						<a class="wow bounceInDown" data-wow-delay="0.4s" href="#"> <img  src="img/social/youtube-symbol.png" alt="Youtube">	
  						</a>
  					</div>
  				</div>
@@ -99,5 +101,10 @@
  				</div>
  		</div> <!-- /.container -->
  		</footer>
+ 		<script src="js/wow.min.js">
+ 		</script>
+ 		<script>
+ 		new WOW().init();
+ 		</script>
 </body>
 </html>
