--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 	<head>
 	<!-- Важная техническая информация для браузера -->
 	<meta charset="utf-8">
@@ -11,11 +11,11 @@
 	<meta name="auyhor" content="Денис Каюда">
 
 	<!-- Иконка, которая будет на вкладке в браузере -->
-	<link rel="icon" href="/favicon.ico">
+	<link rel="icon" href="img/не включается.jpg">
 	<!-- Заголовок на вкладке в браузере -->
 	<title> Ремонт квадрокоптеров </title>
 	<!-- Шрифты Google -->
-	<link href="https://fonts.googleapis.com/css?family=Roboto:400,700&amp;subset=cyrillic" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Playfair+Display:400,700&amp;subset=cyrillic" rel="stylesheet">
 	<!-- Подключаем наш файл со стилями, который находится в папке css-->
 	<link rel="stylesheet" href="css/bootstrap-grid.min.css">
 	<link rel="stylesheet" href="css/style.css">
@@ -25,16 +25,31 @@
 
 		<body>
  		<!-- Тут будет содержимое будущего сайта -->
+
  		<header>
+ 			<style> a 
+ 			{ 
+ 				text-decoration: none;
+ 			 }
+ 			</style>
  			<div class="container">
  			<div class="row">
  			<div class="col-xl-7">
- 			<img class="header-img wow fadeInLeftBig" src="img/main-img2.png" alt="Монитор">
- 			</div> <!-- /.col-7 -->
+ 			<img class="header-img wow fadeInLeftBig" src="img/main-img2.png" alt="Квадрокоптер">
+ 			</div> <!-- /.col-xl-7 -->
  			<div class="col-xl-5">
- 			<p class="header-pretitle wow fadeInRightBig"> Сервисный центр </p>
+			<a href="tel:+79064146989"> <p class="header-pretitle-1 wow fadeInRightBig"> Тел.: +7 906 414-69-89 
+			</a>
+			<br> E-mail: kvadro.service161@gmail.com
+			</p>
+			<ruby>
+			<a href="viber://chat?number=79064146989"> <rtc class="viber"> Viber </rtc> </a>
+			| <a href="whatsapp://send?phone=+79064146989"> <rtc class="whatsup"> Whatsup </rtc> </a>
+			| <a href="tg://resolve?domain=@DVKayuda"> <rtc class="telegram"> Telegram </rtc> </a>
+			</ruby> 
+ 			<p class="header-pretitle-2 wow fadeInRightBig"> Сервисный центр </p>
  			<h1 class="header-title animated fadeInRightBig"> Ремонт квадрокоптеров </h1>
- 			<p class="header-subtitle wow fadeInRightBig"> Ремонт и настройка квадрокоптеров любой сложности. <br> Заберём. Починим. Доставим. </p>
+ 			<p class="header-subtitle wow fadeInRightBig"> Ремонт и настройка квадрокоптеров любой сложности</p>
  			<div class="header-button-block wow fadeInRightBig">
  				<a href="https://vk.com/nike2508" class="header-button"> Связаться </a>
  				<small>*Бесплатная консультация и диагностика</small>
@@ -47,22 +62,25 @@
  			<div class="container">
  			<div class="portfolio-block wow fadeIn"> 
 			<h2 class="portfolio-title"> Качественный и быстрый сервис </h2>
-			<p class="portfolio-subtitle"> Пробный текст </p>
+			<p class="portfolio-subtitle"> по Ростову-на-Дону и области </p>
 			<div class="row">
 			<div class="col-md-6">
 				<div class="portfolio-col-1"> 
-				<img src="img/portfolio-img.jpg" alt="Картинка">
-				<h3>внутренний университет «Газпром нефти»</h3>
-				<p class="portfolio-text"> У «Газпром нефти» есть внутренний Корпоративный университет для сотрудников. Это настоящий университет, где сотрудники проходят обучение у внутренних тренеров компании или у специально приглашенных лекторов и экспертов...</p>
-				<a href="#"> Смотреть работу </a>
+				<h3 class="portfolio-title-1"> Наш сервисный центр </h3> <br>
+				<p class="portfolio-text-1"> производит качественный и прозрачный сервис по ремонту, обновлению и переустановке программного обеспечения, а также сборке кастомных моделей квадрокоптеров и дронов.</p>
+				<h3>Заберём! Починим! Привезём!</h3>
 			</div> <!-- /.portfolio-col -->
 			</div> <!-- /.col-6 -->
 			<div class="col-md-6">
 			<div class="portfolio-col-2">
-				<img src="img/portfolio-img2.jpg" alt="Мир">
-				<h3> Сайт платежной системы «Мир»</h3>
-				<p class="portfolio-text">Обновленная версия сайта знакомит посетителей с компаниями, уже принимающими карты к оплате, и приглашает всех остальных присоединиться к проекту...</p>
-				<a href="#"> Смотреть работу </a>
+				<img class="portfolio-img" src="img/об землю.jpg" alt="Починка">
+	<h3> Прайс-лист</h3>
+<ul class="portfolio-text-2"> <li> Диагностика – бесплатно </li>
+<li> Диагностика аппаратная (полная разборка, диагностика, сборка и тестирование аппарата) – 500 руб. </li>
+<li> Замена компасов – от 1000 руб. (не включает стоимость запчасти) </li>
+<li> Замена двигателя – от 1000 руб. (не включает стоимость запчасти) </li>
+<li> Восстановление системного обеспечения на флеш-карте пульта и квадрокоптера – 1500 руб.</li></p>
+		
 			</div> <!-- /. portfolio-col -->
 			</div> <!-- /.col-6 -->
 			</div> <!-- /.portfolio-block -->
@@ -74,28 +92,40 @@
  		<div class="container">
  			<div class="row">
  				<div class="col-md-4">
- 					<h4 class="footer-author"> Сервисный центр </h4>
- 					<p class="footer-text"> Ремонт квадрокоптеров и дронов</p>
+ 					<div class="footer-partners-block">
+ 					<p class="footer-partners"> <h4> Наши партнеры: </h4> </p>
+ 					<p> <a href="http://www.kust-film.com" class="footer-name-logo-1"> Фотостудия «КУСТ» 
+ 					<br> 
+ 					<img class="footer-img-1 wow fadeInLeftBig" src="img/kust_logo.png" alt="КУСТ">
+ 					</a>
+ 					</p>
+ 					<p> <a href="https://www.instagram.com/smartphotostudio/" class="footer-name-logo-2"> Фотостудия «SMART» <br>
+ 					<img class="footer-img-2 wow fadeInLeftBig" src="img/smart_logo.jpg" alt="SMART"></a> </p>
  				</div>
+ 			</div>
  				<div class="col-md-4">
  					<div class="social-block">
- 					<p> Мы в социальных сетях: </p>	
- 						<a class="wow bounceInDown" data-wow-delay="0.1s" href="#"> <img src="img/social/facebook-logo-button.png" alt="Facebook"> 
- 						</a>
- 						<a class="wow bounceInDown" data-wow-delay="0.2s" href="#"> <img src="img/social/telegram-symbol.png" alt="Telegram">		
- 						</a>
- 						<a class="wow bounceInDown" data-wow-delay="0.3s" href="https://vk.com/nike2508"> <img src="img/social/vk-social-logotype.png" alt="Vkontakte">		
- 						</a>
- 						<a class="wow bounceInDown" data-wow-delay="0.4s" href="#"> <img  src="img/social/youtube-symbol.png" alt="Youtube">	
+ 					<p> <h4> Мы в социальных сетях: </h4> </p>	
+ 						<a class="wow bounceInDown" data-wow-delay="0.3s" href="https://vk.com/public168390620"> <img src="img/social/vk-social-logotype.png" alt="Vkontakte">		
  						</a>
  					</div>
  				</div>
 				
  				<div class="col-md-4">
  					<div class="footer-cta-block">
- 						<p class="footer-cta"> Напишите нам: </p>
+ 						<p class="footer-cta"> <h4> Напишите нам: </h4> </p>
  					<a href="https://vk.com/nike2508" class="footer-button">Написать</a>
- 					</div>
+ 					<p class="footer-contact-header"> Наши контакты: 
+ 					<a href="tel:+79064146989"> <br class="footer-contact-text"> Тел.: +7 906 414-69-89 <br> </a>
+<ruby>
+	<a href="viber://chat?number=79064146989"> <rtc class="viber"> Viber </rtc> </a>
+	| <a href="whatsapp://send?phone=+79064146989"> <rtc class="whatsup"> Whatsup </rtc> </a>
+	| <a href="tg://resolve?domain=@DVKayuda"> <rtc class="telegram"> Telegram </rtc> </a>
+</ruby> 
+	<br>
+	E-mail: kvadro.service161@gmail.com
+				</p>
+				</div>
  				</div>
  				</div>
  				</div>
