--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 			</a>
 			<br> E-mail: kvadro.service161@gmail.com
 			</p>
-			<ruby>
+			<ruby> <p class="header-hyper">
 			<a href="viber://chat?number=79064146989"> <rtc class="viber"> Viber </rtc> </a>
 			| <a href="whatsapp://send?phone=+79064146989"> <rtc class="whatsup"> Whatsup </rtc> </a>
 			| <a href="tg://resolve?domain=@DVKayuda"> <rtc class="telegram"> Telegram </rtc> </a>
