--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 	<title> Ремонт квадрокоптеров </title>
 	<!-- Шрифты Google -->
 	<link href="https://fonts.googleapis.com/css?family=Playfair+Display:400,700&amp;subset=cyrillic" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Play:400,700&amp;subset=cyrillic" rel="stylesheet">
 	<!-- Подключаем наш файл со стилями, который находится в папке css-->
 	<link rel="stylesheet" href="css/bootstrap-grid.min.css">
 	<link rel="stylesheet" href="css/style.css">
@@ -48,7 +49,8 @@
 			| <a href="tg://resolve?domain=@DVKayuda"> <rtc class="telegram"> Telegram </rtc> </a>
 			</ruby> 
  			<p class="header-pretitle-2 wow fadeInRightBig"> Сервисный центр </p>
- 			<h1 class="header-title animated fadeInRightBig"> Ремонт квадрокоптеров </h1>
+ 			<h1 class="header-title animated fadeInRightBig"> КВАДРО-сервис </h1>
+
  			<p class="header-subtitle wow fadeInRightBig"> Ремонт и настройка квадрокоптеров любой сложности</p>
  			<div class="header-button-block wow fadeInRightBig">
  				<a href="https://vk.com/nike2508" class="header-button"> Связаться </a>
