--- a/index.html
+++ b/index.html
@@ -8,12 +8,20 @@
 
 	<!-- Информация об авторе и описание проекта -->
 	<meta name="description" content="Ремонт квадрокоптеров">
-	<meta name="auyhor" content="Денис Каюда">
-
+	<meta name="author" content="Денис Каюда">
+	<meta name="copyright" lang="ru" content="КВАДРО-сервис">
+	<meta name="description" content="Бесплатная диагностика в сервисном центре КВАДРО-сервис. Предоставляем услуги ремонта, калибровки и настройки квадрокоптеров любой сложности, а также переустановку программного обеспечения на квадрокоптер и пульт управления, не выходя из дома. Специалисты сервисного центра приедут к Вам и оформят необходимую услугу. Диагностика бесплатно.">
+	
 	<!-- Иконка, которая будет на вкладке в браузере -->
-	<link rel="icon" href="img/не включается.jpg">
+	<link rel="icon" href="img/icon.png" type="image/x-icon">
+
 	<!-- Заголовок на вкладке в браузере -->
-	<title> Ремонт квадрокоптеров </title>
+	<title> Ремонт квадрокоптеров в Ростове-на-Дону и Ростовской области</title>
+
+	<!-- Полезные мета-теги -->
+	<meta name="robots" content="all">
+	<meta name="yandex" content="all">
+
 	<!-- Шрифты Google -->
 	<link href="https://fonts.googleapis.com/css?family=Playfair+Display:400,700&amp;subset=cyrillic" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Play:400,700&amp;subset=cyrillic" rel="stylesheet">
@@ -42,14 +50,14 @@
 			<a href="tel:+79064146989"> <p class="header-pretitle-1 wow fadeInRightBig"> Тел.: +7 906 414-69-89 
 			</a>
 			<br> E-mail: kvadro.service161@gmail.com
-			</p>
 			<ruby> <p class="header-hyper">
 			<a href="viber://chat?number=79064146989"> <rtc class="viber"> Viber </rtc> </a>
 			| <a href="whatsapp://send?phone=+79064146989"> <rtc class="whatsup"> Whatsup </rtc> </a>
 			| <a href="tg://resolve?domain=@DVKayuda"> <rtc class="telegram"> Telegram </rtc> </a>
 			</ruby> 
- 			<p class="header-pretitle-2 wow fadeInRightBig"> Сервисный центр </p>
- 			<h1 class="header-title animated fadeInRightBig"> КВАДРО-сервис </h1>
+ 			<h1 class="header-pretitle-2 wow fadeInRightBig"> Ремонт квадрокоптеров в Ростове-на-Дону 
+ 				<br> и Ростовской области</p>
+ 			<p class="header-title animated fadeInRightBig"> КВАДРО-сервис </h1>
 
  			<p class="header-subtitle wow fadeInRightBig"> Ремонт и настройка квадрокоптеров любой сложности</p>
  			<div class="header-button-block wow fadeInRightBig">
@@ -59,7 +67,6 @@
 			</div> <!-- /.row -->
 			</div> <!-- /.container -->
  		</header>
-
  		<section class="portfolio">
  			<div class="container">
  			<div class="portfolio-block wow fadeIn"> 
@@ -68,28 +75,26 @@
 			<div class="row">
 			<div class="col-md-6">
 				<div class="portfolio-col-1"> 
-				<h3 class="portfolio-title-1"> Наш сервисный центр </h3> <br>
+				<h3 class="portfolio-title-1"> КВАДРО-сервис </h3> <br>
 				<p class="portfolio-text-1"> производит качественный и прозрачный сервис по ремонту, обновлению и переустановке программного обеспечения, а также сборке кастомных моделей квадрокоптеров и дронов.</p>
-				<h3>Заберём! Починим! Привезём!</h3>
+				<h3> Заберём! Починим! Привезём! </h3>
 			</div> <!-- /.portfolio-col -->
 			</div> <!-- /.col-6 -->
 			<div class="col-md-6">
 			<div class="portfolio-col-2">
 				<img class="portfolio-img" src="img/об землю.jpg" alt="Починка">
-	<h3> Прайс-лист</h3>
+	<h3> Прайс-лист </h3>
 <ul class="portfolio-text-2"> <li> Диагностика – бесплатно </li>
 <li> Диагностика аппаратная (полная разборка, диагностика, сборка и тестирование аппарата) – 500 руб. </li>
 <li> Замена компасов – от 1000 руб. (не включает стоимость запчасти) </li>
 <li> Замена двигателя – от 1000 руб. (не включает стоимость запчасти) </li>
 <li> Восстановление системного обеспечения на флеш-карте пульта и квадрокоптера – 1500 руб.</li></p>
-		
 			</div> <!-- /. portfolio-col -->
 			</div> <!-- /.col-6 -->
 			</div> <!-- /.portfolio-block -->
  			</div> <!-- /.row -->
  			</div> <!-- /.container -->
  		</section>
-
  		<footer>
  		<div class="container">
  			<div class="row">
