--- a/index_eng.html
+++ b/index_eng.html
@@ -31,6 +31,10 @@
 	<link rel="stylesheet" href="css/animate_2.css">
 	<link rel='dns-prefetch' href='//s.w.org' />
 	<link rel="alternate" type="application/rss+xml" title="123" href="http://xn--90atkh.xn--p1ai/%d0%b3%d0%bb%d0%b0%d0%b2%d0%bd%d0%b0%d1%8f/feed/" />
+		<!--<script type="text/javascript">
+			window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/2.4\/72x72\/","ext":".png","svgUrl":"https:\/\/s.w.org\/images\/core\/emoji\/2.4\/svg\/","svgExt":".svg","source":{"concatemoji":"http:\/\/xn--90atkh.xn--p1ai\/wp-includes\/js\/wp-emoji-release.min.js?ver=4.9.7"}};
+			!function(a,b,c){function d(a,b){var c=String.fromCharCode;l.clearRect(0,0,k.width,k.height),l.fillText(c.apply(this,a),0,0);var d=k.toDataURL();l.clearRect(0,0,k.width,k.height),l.fillText(c.apply(this,b),0,0);var e=k.toDataURL();return d===e}function e(a){var b;if(!l||!l.fillText)return!1;switch(l.textBaseline="top",l.font="600 32px Arial",a){case"flag":return!(b=d([55356,56826,55356,56819],[55356,56826,8203,55356,56819]))&&(b=d([55356,57332,56128,56423,56128,56418,56128,56421,56128,56430,56128,56423,56128,56447],[55356,57332,8203,56128,56423,8203,56128,56418,8203,56128,56421,8203,56128,56430,8203,56128,56423,8203,56128,56447]),!b);case"emoji":return b=d([55357,56692,8205,9792,65039],[55357,56692,8203,9792,65039]),!b}return!1}function f(a){var c=b.createElement("script");c.src=a,c.defer=c.type="text/javascript",b.getElementsByTagName("head")[0].appendChild(c)}var g,h,i,j,k=b.createElement("canvas"),l=k.getContext&&k.getContext("2d");for(j=Array("flag","emoji"),c.supports={everything:!0,everythingExceptFlag:!0},i=0;i<j.length;i++)c.supports[j[i]]=e(j[i]),c.supports.everything=c.supports.everything&&c.supports[j[i]],"flag"!==j[i]&&(c.supports.everythingExceptFlag=c.supports.everythingExceptFlag&&c.supports[j[i]]);c.supports.everythingExceptFlag=c.supports.everythingExceptFlag&&!c.supports.flag,c.DOMReady=!1,c.readyCallback=function(){c.DOMReady=!0},c.supports.everything||(h=function(){c.readyCallback()},b.addEventListener?(b.addEventListener("DOMContentLoaded",h,!1),a.addEventListener("load",h,!1)):(a.attachEvent("onload",h),b.attachEvent("onreadystatechange",function(){"complete"===b.readyState&&c.readyCallback()})),g=c.source||{},g.concatemoji?f(g.concatemoji):g.wpemoji&&g.twemoji&&(f(g.twemoji),f(g.wpemoji)))}(window,document,window._wpemojiSettings);
+		</script> -->
 	</head>
 
 		<body link="#e54427" vlink="##e54427" alink="#49474d">
@@ -39,16 +43,12 @@
  		<header>
  			<div class="container">
  			<div class="row">
- 			<div class="col-md-6 col-xl-6">
+ 			<div class="col-xl-6">
  			<img src="img/logo-white.png" class="main-image" src="#" alt="logo">
  			</div> <!-- /.col-xl-7 -->
- 			<div class="col-md-6 col-xl-6">
+ 			<div class="col-xl-6">
  				<div class="optional">
-			<p class="language">
-				<span class="language_ru"> RU</span>
-				<a href="index_eng.html"><span class="language_eng">EN</span>
-				</a>
-				</div>
+			<p class="language"><span class="language_ru"> RU<span class="slash-spin"> / <span class="language_eng">EN</p>
 			<h1 class="formfactor">ОБЩЕСТВО С ОГРАНИЧЕННОЙ<br>ОТВЕТСТВЕННОСТЬЮ «АГРОДОНЭКСПОРТ»</h1>
 			<p class="detailfactor">347360, Ростовская обл., г.Волгодонск, ул.7-я Заводская,44,пом.40<br>
 			<!--ИНН 6143095192 КПП 614301001 ОГРН 11/6196037797<br>
@@ -60,7 +60,7 @@
  				<p><a href="tel:+79185091147" class="telephone-number wow fadeInRightBig"> +7-918-509-11-47</a></p>
  				<p><a href="mailto:Agrodonexport@gmail.com" class="mailer wow fadeInRightBig">Agrodonexport@gmail.com</a></p>
  			<br>
-			<button class="btn-phone wow fadeInRightBig">Заказать звонок</button>
+			<button class="btn-phone">Заказать звонок</button>
 			</div>
  			</div> <!-- /.col-5 -->
 			</div> <!-- /.row -->
@@ -87,55 +87,21 @@
 	</div>
 </div>
 </section>
-	<section class="about-us">
-		<div class="container about-us">
-			<div class="row">
-				<div class="col-lg-12 col-md-4">
-					<h2 class="about-us-title"> О нас </h2>
-				<p class="company-text"> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Error porro, nisi magnam rem quam ratione sed eum accusantium ipsam? Voluptatibus natus, officia suscipit eius. Animi libero, mollitia magnam cum deleniti. </p>
-				</div>
-			</div>
-		</div>
-	</section>
-	<section>
-		<div class="container">
-			<div class="row">
-				<div class="col-md-4 col-sm-6">
-				<div class="production-easy"><p class="product-easy-text"> Гл.продукт </p>
-				</div>
-				</div>
-				<div class="col-md-4 col-sm-6">
-				<div class="production-easy"><p class="product-easy-text"> Гл.продукт </p>
-				</div>
-				</div>
-				<div class="col-md-4 col-sm-6">
-				<div class="production-easy"><p class="product-easy-text"> Гл.продукт </p>
-				</div>
-				</div>
-				<div class="col-lg-12 col-md-4">
-				<div class="production-easy-catalog"><button class="link-catalog"> Перейти в каталог </button>
-				</div>
-				</div>
-			</div>
-		</div>
-	</section>
-	<section class="partners">
+		<section class="partners">
  		<div class="container services-section">
-			<div class="row">
-				<div class="col-md-4 col-sm-6">
-		  			<a href="#"  target="_blank" id="important">
-		  			<div class="services-detail partners-detail">
-		    			<p class="card_info">
-		      			<div class="media row">
-		        			<div class="col-sm-4"><img class="media-object-partner" src="img/partners.png" alt="...">
-		        			</div>
-		        				<div class="media-body col-sm-8"><h5 class="media-heading">Партнёр 1</h5>
-		        				</div>
-		      			</div>
-		   				</p>
-		  			</div>
-		  			</a>
-				</div>
+		<div class="row">
+		<div class="col-md-4 col-sm-6">
+		  <a href="#"  target="_blank" id="important">
+		  <div class="services-detail partners-detail">
+		    <p class="card_info">
+		      <div class="media row">
+		        <div class="col-sm-4"><img class="media-object-partner" src="img/partners.png" alt="..."></div>
+		        <div class="media-body col-sm-8"><h5 class="media-heading">Партнёр 1</h5></div>
+		      </div>
+		    </p>
+		  </div>
+		  </a>
+		</div>
 		<div class="col-md-4 col-sm-6">
 		  <a href="#" target="_blank" id="important">
 		  <div class="services-detail partners-detail">
@@ -173,7 +139,6 @@
 		  </a>
 		</div>
 		<div class="col-md-4 col-sm-6">
-			  <a href="#" target="_blank" id="important">
 		<div class="services-detail partners-detail-partner">
 		      <p class="card_info">
 		        <div class="media row">
@@ -183,61 +148,52 @@
 		        </div>
 		      </p>
 		    </div>
-		</a>
-		</div>
-		<div class="col-md-4 col-sm-6">
-			  <a href="#" target="_blank" id="important">
-		<div class="services-detail partners-detail-partner">
-		      <p class="card_info">
-		        <div class="media row">
-		          <div class="col-sm-4"><img class="media-object-partner" src="img/partners.png" alt="..."></div>
-		          <div class="media-body col-sm-8"><h5 class="media-heading">Партнёр 6</h5>
-		          </div>
-		        </div>
-		      </p>
-		    </div>
-		</a>
 		</div>
 		</div>
 	</div>
 </section>
-<footer>
+ 		<footer>
  		<div class="container">
  			<div class="row">
  				<div class="col-md-4">
  					<div class="footer-partners-block">
- 					<p class="footer-partners"> <h4> Заглушка: </h4> </p>
- 					<p> <a href="#" class="footer-name-logo-1"> Заглушка
+ 					<p class="footer-partners"> <h4> # </h4> </p>
+ 					<p> <a href="#" class="footer-name-logo-1"># 
  					<br> 
- 					<img class="footer-img-1 wow fadeInLeftBig" src="#" alt="Изображение">
+ 					<img class="footer-img-1 wow fadeInLeftBig" src="#" alt="#">
  					</a>
  					</p>
- 					<p> <a href="#" class="footer-name-logo-2"> Заглушка 2 <br>
- 					<img class="footer-img-2 wow fadeInLeftBig" src="#" alt="Изображение"></a> </p>
+ 					<p> <a href="#" class="footer-name-logo-2"> # <br>
+ 					<img class="footer-img-2 wow fadeInLeftBig" src="#" alt="#"></a> </p>
  				</div>
  			</div>
  				<div class="col-md-4">
  					<div class="social-block">
- 					<p> <h4> Ссылки на социальные сети/мессенджеры </h4> </p>	
- 						<a class="wow bounceInDown" data-wow-delay="0.3s" href="#"> <img src="img/social/vk-social-logotype.png" alt="Vkontakte">		
+ 					<p> <h4> # </h4> </p>	
+ 						<a class="wow bounceInDown" data-wow-delay="0.3s" href="#"> <img src="#" alt="#">		
  						</a>
- 						<br>
- 						<p class="footer-seo"> seo-текст </p>
  					</div>
  				</div>
 				
  				<div class="col-md-4">
  					<div class="footer-cta-block">
- 						<p class="footer-cta"> <h4> Напишите нам: </h4> </p>
- 					<button class="btn-phone-footer wow fadeInRightBig">Заказать звонок</button>
- 					<p class="footer-contact-header"> Наши контакты:
- 					<a href="tel:+79185091147"> <br class="footer-contact-text"> Тел.: +7-918-509-11-47 <br> </a>
-	Agrodonexport@gmail.com
+ 						<p class="footer-cta"> <h4> # </h4> </p>
+ 					<a href="#" class="footer-button">#</a>
+ 					<p class="footer-contact-header"> #
+ 					<a href="tel:#"> <br class="footer-contact-text"> # <br> </a>
+<ruby>
+	<a href="viber://chat?number=#"> <rtc class="viber"> # </rtc> </a>
+	| <a href="whatsapp://send?phone=+#"> <rtc class="whatsup"> # </rtc> </a>
+	| <a href="tg://resolve?domain=@DVKayuda"> <rtc class="telegram"> # </rtc> </a>
+</ruby> 
+	<br>
+	#
 				</p>
 				</div>
  				</div>
  				</div>
  				</div>
+ 		</div> <!-- /.container -->
  		</footer>
  		<script src="js/script.js">
  		</script>
