--- a/index.html
+++ b/index.html
@@ -40,7 +40,8 @@
  			<div class="container">
  			<div class="row">
  			<div class="col-md-6 col-xl-6">
- 			<img src="img/logo-white.png" class="main-image" src="#" alt="logo">
+ 				<div class="main-logo-header"><img src="img/logo-white.png" class="main-image" src="#" alt="logo">
+ 		</div>
  			</div> <!-- /.col-xl-7 -->
  			<div class="col-md-6 col-xl-6">
  				<div class="optional">
